--- a/app/src/main/res/layout/activity_actv_calculadora.xml
+++ b/app/src/main/res/layout/activity_actv_calculadora.xml
@@ -13,17 +13,53 @@
     <TextView
         android:id="@+id/txt_visor_calculadora"
         android:layout_width="match_parent"
-        android:layout_height="66dp"
+        android:layout_height="150dp"
         android:background="@color/white"
-        android:hint="Visor"
         android:textAlignment="textEnd"
-        android:textSize="23pt">
+        android:textSize="40pt"
+        android:layout_margin="10dp">
+
 
     </TextView>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <TableRow>
+
+            <Button
+
+                style="@style/botao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="1"></Button>
+
+            <Button
+
+                style="@style/botao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="CE"></Button>
+
+            <Button
+
+                style="@style/botao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="C"></Button>
+
+            <Button
+
+                style="@style/botao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="-"></Button>
+        </TableRow>
 
         <TableRow>
 
