Acabei logica de calculo, fiz logica de outros botoes

--- a/app/src/main/res/layout/activity_actv_calculadora.xml
+++ b/app/src/main/res/layout/activity_actv_calculadora.xml
@@ -44,7 +44,7 @@
                 android:text="CE"></Button>
 
             <Button
-
+                android:id="@+id/bt_limpatext_calc"
                 style="@style/botao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
