--- a/app/src/main/res/layout/activity_actv_calculadora.xml
+++ b/app/src/main/res/layout/activity_actv_calculadora.xml
@@ -46,7 +46,7 @@
                 android:text="C"></Button>
 
             <Button
-
+                android:id="@+id/bt_apagaUm"
                 style="@style/botao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -192,7 +192,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text=","></Button>
+                android:text="."></Button>
 
             <Button
                 android:id="@+id/btigual"
