--- a/app/src/main/res/layout/activity_actv_calculadora.xml
+++ b/app/src/main/res/layout/activity_actv_calculadora.xml
@@ -29,7 +29,7 @@
         <TableRow>
 
             <Button
-
+                android:id="@+id/bt_factorial_calc"
                 style="@style/botao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -171,7 +171,7 @@
         <TableRow>
 
             <Button
-
+                android:id="@+id/bt_positnegat_calc"
                 style="@style/botao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
