--- a/app/src/main/res/layout/activity_actv_calculadora.xml
+++ b/app/src/main/res/layout/activity_actv_calculadora.xml
@@ -206,5 +206,12 @@
 
     </TableLayout>
 
+    <Button
+        android:id="@+id/bt_voltar_calc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Voltar"></Button>
+
 
 </LinearLayout>
