Feitas classes e xml para base de dados, falta criar base de dados

--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -15,4 +15,11 @@
         android:id="@+id/mnu_selos_mymnu">
 
     </item>
+
+    <item android:title="BDJogador"
+        app:showAsAction="collapseActionView"
+        android:icon="@drawable/chave"
+        android:id="@+id/mnu_jogador_mymnu">
+
+    </item>
 </menu>
